--- a/src/gui/login.fxml
+++ b/src/gui/login.fxml
@@ -60,7 +60,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <Hyperlink alignment="TOP_LEFT" layoutX="94.0" layoutY="351.0" style="-fx-alignment: align;" text="forgot password ?" textAlignment="CENTER" textFill="#01181b">
+            <Hyperlink alignment="TOP_LEFT" layoutX="94.0" layoutY="351.0" style="-fx-alignment: align;" onAction="#forgotpass" text="forgot password ?" textAlignment="CENTER" textFill="#01181b">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
