--- a/src/gui/EspaceMagasin.fxml
+++ b/src/gui/EspaceMagasin.fxml
@@ -110,17 +110,6 @@
       </HBox>
       <HBox prefHeight="529.0" prefWidth="1025.0" styleClass="main">
          <children>
-            <VBox prefHeight="524.0" prefWidth="66.0">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <children>
-                  <FontAwesomeIconView fx:id="addstoreicon" glyphStyle="-fx-fill:#4f86dd" onMouseClicked="#MenuEspace" size="60" />
-                  <FontAwesomeIconView fx:id="addenchersicon" glyphStyle="-fx-fill:#4f86dd" onMouseClicked="#MenuEspace" size="60" />
-                  <FontAwesomeIconView fx:id="gererproduiticon" glyphStyle="-fx-fill:#4f86dd" onMouseClicked="#MenuEspace" size="60" />
-                  <FontAwesomeIconView fx:id="gererenchersicon" glyphStyle="-fx-fill:#4f86dd" onMouseClicked="#MenuEspace" size="60" />
-               </children>
-            </VBox>
             <Pane prefHeight="524.0" prefWidth="959.0">
                <children>
                   <Label layoutX="58.0" layoutY="51.0" prefHeight="122.0" prefWidth="509.0" text="ESPACE MAGASIN" textFill="WHITE">
@@ -132,7 +121,7 @@
                      <children>
                         <ImageView fx:id="addstore" fitHeight="225.0" fitWidth="300.0" onMouseClicked="#MenuEspace" pickOnBounds="true">
                            <image>
-                              <Image url="@../utils/assets/event.jpg" />
+                              <Image url="@../utils/assets/Stock-538x218.jpg" />
                            </image>
                         </ImageView>
                         <Label text="ajouter au store" textFill="WHITE">
@@ -146,7 +135,7 @@
                      <children>
                         <ImageView fx:id="addenchers" fitHeight="150.0" fitWidth="300.0" onMouseClicked="#MenuEspace" pickOnBounds="true">
                            <image>
-                              <Image url="@../utils/assets/event.jpg" />
+                              <Image url="@../utils/assets/encehres.jpg" />
                            </image>
                         </ImageView>
                         <Label text="Deplacer vers encheres" textFill="WHITE">
@@ -160,7 +149,7 @@
                      <children>
                         <ImageView fx:id="gererenchers" fitHeight="150.0" fitWidth="300.0" onMouseClicked="#MenuEspace" pickOnBounds="true">
                            <image>
-                              <Image url="@../utils/assets/event.jpg" />
+                              <Image url="@../utils/assets/encehres.jpg" />
                            </image>
                         </ImageView>
                         <Label text="Gerer Enchers" textFill="WHITE">
@@ -172,11 +161,6 @@
                   </Pane>
                   <Pane layoutX="19.0" layoutY="314.0">
                      <children>
-                        <ImageView fx:id="gererproduit" fitHeight="150.0" fitWidth="300.0" onMouseClicked="#MenuEspace" pickOnBounds="true">
-                           <image>
-                              <Image url="@../utils/assets/event.jpg" />
-                           </image>
-                        </ImageView>
                         <Label text="Gerer Produits" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="34.0" />
