--- a/src/gui/SessionEncheres.fxml
+++ b/src/gui/SessionEncheres.fxml
@@ -117,7 +117,7 @@
                <children>
                   <TextArea fx:id="textarea" layoutX="462.0" layoutY="72.0" prefHeight="200.0" prefWidth="187.0" />
                   <TextField fx:id="textfield" layoutX="481.0" layoutY="297.0" />
-                  <Button fx:id="send" layoutX="470.0" layoutY="344.0" mnemonicParsing="false" onAction="#SendMise" prefHeight="46.0" prefWidth="171.0" text="Mise" />
+                  <Button fx:id="send" layoutX="470.0" layoutY="344.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="171.0" text="Mise" />
                   <Label layoutX="462.0" layoutY="14.0" prefHeight="45.0" prefWidth="163.0" text="Les dernieres Mies :" />
                   <Label layoutX="35.0" layoutY="28.0" text="Count Down" />
                   <Pane fx:id="countDown" layoutX="35.0" layoutY="59.0" prefHeight="200.0" prefWidth="340.0" />
