--- a/src/gui/Register.fxml
+++ b/src/gui/Register.fxml
@@ -5,6 +5,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -90,6 +91,11 @@
                   <InnerShadow color="#1a4a72" />
                </effect>
             </TextField>
+            <Hyperlink alignment="TOP_LEFT" layoutX="145.0" layoutY="413.0" onAction="#login" style="-fx-alignment: align;" text="Login" textAlignment="CENTER" textFill="#01181b">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Hyperlink>
          </children>
          <effect>
             <InnerShadow />
