--- a/src/gui/myprofile.fxml
+++ b/src/gui/myprofile.fxml
@@ -150,6 +150,7 @@
                      </font>
                   </Label>
                   <Button layoutX="219.0" layoutY="253.0" mnemonicParsing="false" onAction="#modifierpass" prefHeight="36.0" prefWidth="258.0" text="changer mot de passe" />
+                  <FontAwesomeIconView fill="#435fc6" glyphName="SIGN_OUT" layoutX="698.0" layoutY="480.0" onMouseClicked="#logout" size="5em" wrappingWidth="53.99999612569809" />
                </children>
             </Pane>
          </children>
